FKW/style.css
* {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  font-family: "Poppins", sans-serif;
  background: 	#000;
}

p {
  line-height: 180%;
  font-size: 16px;
}

a {
  text-decoration: none;
  color: rgb(255, 255, 255);
}

nav {
  position: fixed;
  top: 30px;
  background: linear-gradient(
    90deg,
    rgba(255, 255, 255, 0.9) 0%,
    rgba(255, 255, 255, 0.4) 100%
  );
  backdrop-filter: blur(10px);
  width: 900px;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 12px 32px;
  border-radius: 24px;
  box-shadow: 0 4px 50px -8px rgba(0, 0, 0, 0.2);
  z-index: 300;
}

nav .logo {
  font-weight: bold;
  font-size: 20px;
  color: #ffa200;
  
}

nav .nav-items {
  display: flex;
  gap: 50px;
}

.nav-link:hover {

color: rgb(221, 221, 221);

}

.container {
  max-width: 900px;
  margin-inline: auto;
}

/* Header */

header {
  height: 105vh;
  min-height: 600px;
  max-height: 800px;
  background: linear-gradient(0deg, #000 0%, #441c55 100%);
}

header .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
}

header .left {
  max-width: 500px;
}

h1 {
  font-size: 50px;
  line-height: 130%;
  margin: 0;
  background: linear-gradient(90deg, #ffb941 0%, #ffffff 100%);
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
}

header .left p {
  background: linear-gradient(90deg, #ffffff 0%, #ffffff 100%);
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  line-height: 200%;
}

.buttons {
  display: flex;
  gap: 24px;
}

.link-btn {
  background: #743282;
  color: rgb(255, 255, 255);
  display: flex;
  align-items: center;
  gap: 16px;
  padding: 8px 16px;
  border-radius: 10px;
  font-size: 14px;
  width: 210px;
}

.link-btn:hover {

  background: #51235a;
  ;

}

.link-btn .btn-icon img {
  height: 36px;
  display: flex;
  color: white;
}

.link-btn .btn-text div:first-child {
  text-transform: uppercase;
}

.link-btn .btn-text div:last-child {
  font-weight: bold;
}

header .right img {
  height: 400px;
  display: flex;
}

header .left img {
display: none;
}

/* Poto Section */

section {
  padding: 30px 32px;
}

section h2 {
  color: #8300b6;
  text-align: center;
  margin: 0;
  margin-bottom: 16px;
}

#poto {
  background: linear-gradient(    90deg,    rgba(255, 255, 255, 0.9) 0%,    rgba(255, 255, 255, 0.4) 100%  );
  backdrop-filter: blur(10px);
  box-shadow: 0 5px 55px -15px rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  padding-top: 30px;
  margin-top: -90px;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  -o-border-radius: 10px;
}

#poto .pic {
  display: flex;
  gap: 30px;
  justify-content: center;
  height: 110px;
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%);
}

/* Tentang Kami */

#tentang {
  padding-top: 40px;
  background: #441C55;
  border-radius: 10px;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  -o-border-radius: 10px;


}
#tentang h2 {

  font-size: 30px;
  margin-bottom: 30px;
  background: linear-gradient(90deg, #fda814 0%, #ffffff 100%);
  background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}

#tentang p {

  color: white;

}
/* Arsip */





/* Footer */

footer {
  background: linear-gradient(90deg, #0a1300 0%, #001e0f 100%);
  color: #fff;
  padding-top: 50px;
}

footer a {
  color: #fff;
}

footer .content {
  display: flex;
  justify-content: space-between;
}

footer .logo {
  font-size: 24px;
  font-weight: bold;
}

footer .left p {
  margin-top: 0;
}

footer .right {
  display: flex;
  gap: 40px;
}

footer h3 {
  margin-top: 0;
}

footer ul {
  list-style: none;
  padding: 0;
  margin-bottom: 40px;
}

footer ul li {
  margin: 8px 0;
}

footer .copyright {
  border-top: 1px solid rgba(255, 255, 255, 0.4);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 20px 0;
}

footer .socials {
  display: flex;
  gap: 40px;
}

footer .socials img {
  height: 40px;
}

/* Hidden Items  */

nav .menu-icon,
.mobile-nav-menu {
  display: none;
}

@media (max-width: 600px) {
  section {
    padding-inline: 0;
  }

  nav .nav-items {
    display: none;
  }

  nav {
    width: calc(100% - 30px);
  }

  nav .menu-icon {
    display: block;
    cursor: pointer;
  }

  nav .menu-icon img {
    height: 30px;
    display: flex;
  }

  header .container {
    flex-direction: column;
  }

  header {
    max-height: fit-content;
    height: fit-content;
    padding-top: 80px;
  }

  header .right img {
    display: none;
  }

  header .left img {
    height: 250px;
    display: flex; 
    margin: auto;
    margin-bottom: 30px;
  }

  .container {
    padding: 0 32px;
  }

  h1 {
    font-size: 40px;
  }

  .buttons {
    flex-direction: column;
  }

  .link-btn .btn-icon {

    height: 40px;

  }

  section h2 {
    position: relative;
    margin-bottom: 40px;
  }

  section h2::after {
    content: "";
    position: absolute;
    background: #000;
    width: 30px;
    height: 2px;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
  }

  /* Poto section */

  #poto {
    padding-top: 20px;
    padding-bottom: 20px;
    margin-top: 30px;


  }

  #poto .pic {
    gap: 10px;
    height: 40px;
    width: auto;
  }

  /* Tentang section */

  #tentang {
    padding: 30px;
    margin-top: -10px;
    padding-top: 40px;
  }

  /* Testimonials */

  #testimonials .content {
    flex-direction: column;
  }

  #testimonials .content .left {
    width: 100%;
  }

  #testimonials .left h2::after {
    left: 0;
    transform: translateX(0);
  }

  #testimonials .left h2 {
    margin-bottom: 0;
  }

  #testimonials .right .quote-icon {
    left: -10px;
  }

  .bg-element {
    position: absolute;
    height: 1900px;
    left: -30px;
    right: -30px;
  }

  /* Pricing Section */

  #pricing .content {
    grid-template-columns: 1fr;
  }

  #pricing .plan {
    padding-inline: 0;
  }

  /* Footer */

  footer .content {
    flex-direction: column;
  }

  footer .right {
    flex-direction: column;
    gap: 10px;
    margin-top: 20px;
  }

  footer .copyright {
    flex-direction: column;
  }

  /* Mobile nav menu */

  .mobile-nav-menu {
    position: fixed;
    right: 32px;
    top: 100px;
    background: #16091b;
    display: flex;
    flex-direction: column;
    padding: 8px 16px;
    gap: 16px;
    font-size: 16px;
    border-radius: 10px;
    box-shadow: 0 4px 40px -8px rgba(0, 0, 0, 0.2);
    opacity: 0;
    z-index: 600;
    pointer-events: none;
    transform: translateY(-10px);
    transition: all 300ms ease;
  }

  .mobile-nav-menu.active {
    opacity: 1;
    pointer-events: auto;
    transform: translateY(0);
  }
}

